assets/css/global-nav.css
.affix {
	top: 0;
	width: 100%;
}
.navbar-inverse, .navbar-inverse .navbar-collapse, .navbar-inverse .navbar-form{
	border-style: none;
}
.navbar-inverse .navbar-toggle {
 	border-style: none;
}
.navbar-nav > li > .dropdown-menu, .navbar {
	border-radius: 0;
}
.dropdown-menu {
	border: none;
	box-shadow: none;
	-webkit-box-shadow: none;
	background-color: #efefef;
}
.navbar-inverse, .navbar-inverse .navbar-nav > .active > a, .navbar-inverse .navbar-nav > .active > a:hover, .navbar-inverse .navbar-nav > .active > a:focus {
	background-image: none;
	background-color: #457ABB;
}
.dropdown-menu > li > a:hover {
	color: #536987; /* Blue color */
}
.navbar-inverse .navbar-nav > li > a {
	color: white;
}
.navbar-inverse .navbar-nav > li > a {
	font-size: 10pt;
}
.navbar-inverse .navbar-nav > .open > a, .navbar-inverse .navbar-nav > .open > a:hover, .navbar-inverse .navbar-nav > .open > a:focus,
.navbar-inverse .navbar-toggle:hover, .navbar-inverse .navbar-toggle:focus {
	background-color: #333333;
}
.navbar-inverse .navbar-nav > .open > a, .navbar-inverse .navbar-nav > .active > a {
	background-image: none;
	-webkit-box-shadow: none;
	box-shadow: none;
}
.navbar-toggle {
	border-radius: 0;
	height: 50px;
	margin-top: 0;
	margin-bottom: 0;
	float: left;
}
.navbar-toggle {
  overflow: hidden;
}

